# libft

./: Makefile  Makefile~  ft_memccpy.c  ft_memchr.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strjoin.c  ft_strlen.c  ft_strsplit.c  get_next_line.c  libft.h  libft.h~
ft_printf/: CMakeLists.txt  ft_itoa_long.c  ft_printf.h~  ft_strclr.c  ft_strjoin.c  ft_strncpy.c  ft_strnew.c  header.h  main.c  processing_string.c  test
